force-app/main/default/objects/Case/fields/Has_SR_Case_Subject_Code__c.field-meta.xml
<CustomField>
    <fullName>Has_SR_Case_Subject_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the case has at least one Service request subject code.</description>
    <label>Has SR Case Subject Code</label>
    <type>Checkbox</type>
</CustomField>