force-app/main/default/objects/Case/fields/Has_Subject_Code__c.field-meta.xml
<CustomField>
    <fullName>Has_Subject_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the case has at least one subject code</description>
    <label>Has Subject Code</label>
    <type>Checkbox</type>
</CustomField>