force-app/main/default/objects/Case/fields/Has_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Has_Verification_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the case has at least one verification code</description>
    <label>Has Verification Code</label>
    <type>Checkbox</type>
</CustomField>