force-app/main/default/objects/Case/fields/Installed_Product_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product_Serial_Number__c</fullName>
    <description>US-681
To populate lot/Serial number of installed product
Generated from formula</description>
    <formula>SVMXC__Component__r.SVMXC__Serial_Lot_Number__c</formula>
    <label>Installed Product Serial Number</label>
    <type>Text</type>
</CustomField>