force-app/main/default/objects/Case/fields/Internal_Non_Customer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Non_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify a complaint case as &apos;Internal&apos; so that we  can identify internal complaints</description>
    <inlineHelpText>Cases marked as internal are not visible to customers on their MyIllumina dashboard. If the checkbox is blank, customers can see the case subject and description.</inlineHelpText>
    <label>Internal (Not visible in MyIllumina)</label>
    <type>Checkbox</type>
</CustomField>