force-app/main/default/objects/Case/fields/Investigation_Summary_Comments__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Summary_Comments__c</fullName>
    <description>To capture the Review comments of QA</description>
    <label>Investigation Summary/Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>