force-app/main/default/objects/Case/fields/JIRA_Number__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Number__c</fullName>
    <description>This is created as a part of DCP-614.</description>
    <label>Obsolete Do Not Use</label>
    <length>20</length>
    <type>Text</type>
</CustomField>