force-app/main/default/objects/Case/fields/Last_QA_Review_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_QA_Review_Completion_Date__c</fullName>
    <description>QACM-8 This field will be populated whenever case status changes from Pending QA Review to Closed/Completed multiple times.</description>
    <label>Last QA Review Completion Date</label>
    <type>DateTime</type>
	<!-- QACM-8 -->
</CustomField>