force-app/main/default/objects/Case/fields/Logistics_Investigation_Summary_Comments__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Investigation_Summary_Comments__c</fullName>
    <description>To capture the Review comments of Logistics</description>
    <label>Logistics Investigation Summary/Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>