force-app/main/default/objects/Case/fields/Logistics_Review__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Review__c</fullName>
    <description>To capture details of Logistics Review.</description>
    <label>Logistics Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>See Investigation Summary/Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>