force-app/main/default/objects/Case/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <description>Material Number of the affected part/product</description>
    <label>Material Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>