force-app/main/default/objects/Case/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>US-681
To capture next steps
Generated manually</description>
    <label>Next Steps</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>