force-app/main/default/objects/Case/fields/Number_of_Days_Case_Elevated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Case_Elevated__c</fullName>
    <description>Number of days between Case Creation Date and Elevation Date</description>
    <formula>IF(NOT(ISBLANK(Work_Order__r.SVMXC__Case__r.CreatedDate)),CreatedDate- Work_Order__r.SVMXC__Case__r.CreatedDate , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Case Elevated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>