force-app/main/default/objects/Case/fields/Order_Line_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_External_Id__c</fullName>
    <description>Populated by Order Interface (value = the order line&apos;s ERP Line Number Id) to avoid creation of duplicate cases due to multiple iDocs sent from SAP. Applicable for cases created for Informatics Products</description>
    <externalId>true</externalId>
    <label>Order Line External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>