force-app/main/default/objects/Case/fields/Original_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Sales_Order_Number__c</fullName>
    <description>Original Sales Order Number is populated manually while creating the case.</description>
    <label>Original Sales Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>