force-app/main/default/objects/Case/fields/Other_Abandoned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Abandoned_Reason__c</fullName>
    <businessOwnerUser>afornadel@illumina.com</businessOwnerUser>
    <description>This field will be required when Abandoned Reason is selected as Other on Case</description>
    <inlineHelpText>This field will be required when Abandoned Reason is selected as Other on Case</inlineHelpText>
    <label>Other Abandoned Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>