force-app/main/default/objects/Case/fields/Owner_Changed_through_Process__c.field-meta.xml
<CustomField>
    <fullName>Owner_Changed_through_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US:1100
Why- To Capture whether the owner of the case is changed manually or Automation.
It is checked through Process/ WorkFlow.</description>
    <label>Owner Changed through Process</label>
    <type>Checkbox</type>
</CustomField>