force-app/main/default/objects/Case/fields/pAE_pFA_Awareness_Date__c.field-meta.xml
<CustomField>
    <fullName>pAE_pFA_Awareness_Date__c</fullName>
    <description>To capture awareness date for cases where pAE/pFA is &apos;Yes&apos;</description>
    <inlineHelpText>Date Illumina became aware of an Adverse Event</inlineHelpText>
    <label>pAE/pFA Awareness Date</label>
    <type>Date</type>
</CustomField>