force-app/main/default/objects/Case/fields/pAE_pFA_Awareness_Date_Difference_Reason__c.field-meta.xml
<CustomField>
    <fullName>pAE_pFA_Awareness_Date_Difference_Reason__c</fullName>
    <description>Filled in when the pAE/pFA Awareness Date doesn’t match the Date of Issue Awareness Date.</description>
    <inlineHelpText>Filled in when the pAE/pFA Awareness Date doesn’t match the Date of Issue Awareness Date.</inlineHelpText>
    <label>pAE/pFA Awareness Date Difference Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updated information presented by customer</fullName>
            </value>
            <value>
                <fullName>Additional information discovered during investigation</fullName>
            </value>
            <value>
                <fullName>Other: See Description and Evaluation</fullName>
                <label>Other: See Case Description Field and Work Order Notes Field</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>