force-app/main/default/objects/Case/fields/PAE_PFA_Evaluation_Required__c.field-meta.xml
<CustomField>
    <fullName>PAE_PFA_Evaluation_Required__c</fullName>
    <defaultValue>$Label.CasePAEStatusPending</defaultValue>
    <description>Picklist to determine the pAE/pFA Evaluation Required value. Auto updated from pAE/pFA values in other fields.</description>
    <label>pAE/pFA Evaluation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>