force-app/main/default/objects/Case/fields/PAE_PFA_Recipient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>PAE_PFA_Recipient_Email_Address__c</fullName>
    <description>To store the email address of the recipient of the PAE/PFA Notification</description>
    <label>PAE/PFA Recipient Email Address</label>
    <type>Email</type>
</CustomField>