force-app/main/default/objects/Case/fields/Partner_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Case_Number__c</fullName>
	<description>This field holds case number from Veeva Vault system. SFDC sends a Case Creation request to Veeva system through SNAP and SNAP populates this field with the new Case Number created in Veeva Vault system.</description>
	<externalId>true</externalId>
	<inlineHelpText>Case number provided by support partners</inlineHelpText>
	<label>Partner Case Number</label>
	<length>255</length>
	<type>Text</type>
</CustomField>