force-app/main/default/objects/Case/fields/Parts_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order_Status__c</fullName>
    <description>Field to capture the status of parts orders associated with the case</description>
    <label>Parts Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>