force-app/main/default/objects/Case/fields/Plan_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Plan_of_Action__c</fullName>
    <description>Provide Plan of Action in detail</description>
    <label>Plan of Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>