force-app/main/default/objects/Case/fields/Potentially_Reportable__c.field-meta.xml
<CustomField>
    <fullName>Potentially_Reportable__c</fullName>
    <description>QACM-4 This field will be checked by QA Reviewer when they agree with the Frontline decision of pAE/pFA required = Yes</description>
    <inlineHelpText>Does QA determine the case as a potential reportable event?</inlineHelpText>
    <label>Potentially Reportable?</label>
<!--QACM -40 -->
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>