force-app/main/default/objects/Case/fields/Predicted_QA_Sub_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Predicted_QA_Sub_Product_Family__c</fullName>
    <description>Used for Einstein classification</description>
    <label>Predicted QA Sub Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Predicted_QA_Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>QA_Sub_Product_Family</valueSetName>        
    </valueSet>
</CustomField>