force-app/main/default/objects/Case/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>To capture the language code from Contact.</description>
    <formula>IF(TEXT(Contact.Preferred_Language__c) = &apos;English&apos;, &apos;en_US&apos;, IF(TEXT(Contact.Preferred_Language__c) = &apos;Chinese&apos;, &apos;zh_CN&apos;, IF(TEXT(Contact.Preferred_Language__c) = &apos;French&apos;, &apos;fr&apos;, IF(TEXT(Contact.Preferred_Language__c) = &apos;German&apos;, &apos;de&apos;, IF(TEXT(Contact.Preferred_Language__c) = &apos;Italian&apos;, &apos;it&apos;, IF(TEXT(Contact.Preferred_Language__c) = &apos;Japanese&apos;, &apos;ja&apos;, IF(TEXT(Contact.Preferred_Language__c) = &apos;Korean&apos;, &apos;ko&apos;, IF(TEXT(Contact.Preferred_Language__c) = &apos;Portuguese&apos;, &apos;pt_BR&apos;, IF(TEXT(Contact.Preferred_Language__c) = &apos;Spanish&apos;, &apos;es&apos;, &apos;&apos;) ) ) ) ) ) ) ) )</formula>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>