force-app/main/default/objects/Case/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Store the status of Case before Reopen Requested.  It is updated from Case reopen SFM.</description>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>