force-app/main/default/objects/Case/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>This is created as a part of DCP-614.</description>
    <formula>TEXT( SVMXC__Product__r.Product_Group__c )</formula>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>