force-app/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>This is created as a part of DCP-614</description>
    <formula>TEXT(SVMXC__Product__r.Product_Line_ilmn__c)</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>