force-app/main/default/objects/Case/fields/Product_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Lot_Number__c</fullName>
    <businessOwnerUser>ddunphy@illumina.com</businessOwnerUser>
    <description>Field to hold related Product&apos;s Lot Number. System Populated.</description>
    <label>Product Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>