force-app/main/default/objects/Case/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Name of product, for Product associated with Case.</description>
    <formula>SVMXC__Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>