force-app/main/default/objects/Case/fields/Product_Return_Status_Other__c.field-meta.xml
<CustomField>
    <fullName>Product_Return_Status_Other__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <description>If &quot;Other&quot; was selected in Product Return Status, enter reason in this field</description>
    <inlineHelpText>If &quot;Other&quot; was selected in Product Return Status, enter reason in this field</inlineHelpText>
    <label>Product Return Status - Other</label>
    <type>TextArea</type>
</CustomField>