force-app/main/default/objects/Case/fields/Product_Returned_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Returned_Status__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <description>Records the status of the returned product</description>
    <label>Product Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Returned to Illumina</fullName>
            </value>
            <value>
                <fullName>Product Not Available for Return to Illumina</fullName>
            </value>
            <value>
                <fullName>Consumed</fullName>
            </value>
            <value>
                <fullName>Destroyed</fullName>
            </value>
            <value>
                <fullName>Returned through another Work Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>