force-app/main/default/objects/Case/fields/Product_Returned_Through_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Returned_Through_Work_Order__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the product was returned through another work order, add work order number in this field.</description>
    <inlineHelpText>If the product was returned through another work order, add work order number in this field.</inlineHelpText>
    <label>Product Returned Through Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>WorkOrder (Product Returned Through Work Order)</relationshipLabel>
    <relationshipName>Workorder1</relationshipName>
    <type>Lookup</type>
</CustomField>