force-app/main/default/objects/Case/fields/Product_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Serial_Number__c</fullName>
    <description>Field for holding related Product&apos;s Serial Number. System Populated.</description>
    <inlineHelpText>Primary Product&apos;s Serial number, filled in with either the Installed Product Serial Number or the manually input Product Serial Number.</inlineHelpText>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>