force-app/main/default/objects/Case/fields/QA_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>QA_Product_Family__c</fullName>
    <description>Product family is used for categorization business issue cases by Quality assurance team. Data in this field can be added and updated by QA profile user. These family values are independent of family on product object.</description>
    <label>QA Product Family</label>
<!--QACM-40-->
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Partnership Product</fullName>
            </value>
            <value>
                <fullName>Bead Assay</fullName>
            </value>
            <value>
                <fullName>COVIDSeq</fullName>
            </value>
            <value>
                <fullName>MiSeq DX</fullName>
            </value>
            <value>
                <fullName>NextSeq DX</fullName>
            </value>
            <value>
                <fullName>NovaSeq Dx</fullName>
            </value>
            <value>
                <fullName>NIPT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TSO Comp</fullName>
            </value>
            <value>
                <fullName>Non IVD Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>