force-app/main/default/objects/Case/fields/QA_Review__c.field-meta.xml
<CustomField>
    <fullName>QA_Review__c</fullName>
    <description>To capture details of QA review</description>
    <label>QA Review</label>
<!--QACM-40-->
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refer to Existing/Prior Investigation</fullName>
            </value>
            <value>
                <fullName>See Investigation Summary/Comments</fullName>
            </value>
            <value>
                <fullName>No Further Investigation Required</fullName>
            </value>
            <value>
                <fullName>Further Investigation Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
			<value>
                <fullName>In Progress - Awaiting Internal SME Review</fullName>
            </value>
            <value>
                <fullName>Transferred to ETQ</fullName>
            </value>
            <value>
                <fullName>Non IVD Product</fullName>
            </value>
            
        </valueSetDefinition>
    </valueSet>
</CustomField>