force-app/main/default/objects/Case/fields/QA_Review_Reopen_Communication__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Reopen_Communication__c</fullName>
    <description>QACM-5 : This field will be populated by a QA Reviewer while reoepening the case. This field&apos;s content will be posted to chatter during reopen.</description>
    <label>QA Review Reopen Communication</label>
    <length>9000</length>
    <type>LongTextArea</type>
</CustomField>