force-app/main/default/objects/Case/fields/QA_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>QA_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QACM-22 This field will be populated with the QA Reviewer user who will perform QA Review on the BI case.</description>
    <label>QA Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>