force-app/main/default/objects/Case/fields/QA_Sub_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>QA_Sub_Product_Family__c</fullName>
    <description>Sub Product family is used for categorization business issue cases by Quality assurance team. Data in this field can be added and updated by QA profile user.</description>
    <label>QA Sub Product Family</label>
<!--QACM-40-->
    <type>Picklist</type>
    <valueSet>
        <controllingField>QA_Product_Family__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Partnership Products</fullName>
            </value>
            <value>
                <fullName>CF 139</fullName>
            </value>
            <value>
                <fullName>CF Clinical Sequencing</fullName>
            </value>
            <value>
                <fullName>CN High Output Reagent</fullName>
            </value>
            <value>
                <fullName>CN Medium Output Reagent</fullName>
            </value>            
            <value>
                <fullName>COVIDSeq</fullName>
            </value>
            <value>
                <fullName>MiSeq DX Reagent Kit v3</fullName>
            </value>
            <value>
                <fullName>MiSeq DX Reagent Kit v3, Micro</fullName>
            </value>
            <value>
                <fullName>High Output Reagent Kit v2.5 (75 cycles)</fullName>
            </value>
            <value>
                <fullName>High Output Reagent Kit v2.5 (300 cycles)</fullName>
            </value>
            <value>
                <fullName>NextSeq DX Instrument</fullName>
            </value>
            <value>
                <fullName>NIPT 16</fullName>
            </value>
            <value>
                <fullName>NIPT Solution v1</fullName>
            </value>
            <value>
                <fullName>NIPT Solution v2</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>            
            <value>
                <fullName>iScan Dx</fullName>
            </value>
            <value>
                <fullName>Non-IVD product</fullName>
            </value>
            <value>
                <fullName>TruSeq Custom Amplicon Kit Dx</fullName>
            </value>
            <value>
                <fullName>MiSeq Dx Instrument</fullName>
            </value>
            <value>
                <fullName>TSO Comp Kit</fullName>
            </value>
            <value>
                <fullName>TSO Comp Software</fullName>
            </value>
            <value>
                <fullName>TruSight Oncology DNA Controls</fullName>
            </value>
            <value>
                <fullName>TruSight Oncology RNA Controls</fullName>
            </value>
            <value>
                <fullName>TSO Comp NTRK CDx</fullName>
            </value>
            <value>
                <fullName>DNA Prep with Enrichment</fullName>
            </value>
            <value>
                <fullName>TruSight Cystic Fibrosis Library Prep</fullName>
            </value>
            <value>
                <fullName>NovaSeq Dx Instrument</fullName>
            </value>
            <value>
                <fullName>NovaSeq Dx v1.5 kit (300 cycles)</fullName>
            </value>
            <value>
                <fullName>TruSight Whole Genome Analysis Application</fullName>
            </value>
            <value>
                <fullName>TruSight Whole Genome Dx Library Prep with UD Indexes, 24 sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>