force-app/main/default/objects/Case/fields/Qualtrics_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Survey_Link__c</fullName>
    <description>Qualtrics survey link for a contact on Case.</description>
    <label>Qualtrics Survey Link</label>
    <type>Url</type>
</CustomField>