force-app/main/default/objects/Case/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <defaultValue>&quot;Did the issue involve a death, or serious injury to either the patient or the operator?&quot;</defaultValue>
    <description>Field to Store Question 1 for PAE/PFA Business Cases</description>
    <label>pAE Question 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>