force-app/main/default/objects/Case/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <defaultValue>&quot;Could the issue cause a death or serious injury if it were to recur?&quot;</defaultValue>
    <description>Field to Store Question 2 for PAE/PFA Business Cases</description>
    <label>pAE Question 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>