force-app/main/default/objects/Case/fields/Reason_for_Approval_Denial_of_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Approval_Denial_of_Reopen__c</fullName>
    <description>To capture the Approval or denial reason for a QA pending Case</description>
    <label>Reason for Approval / Denial of Reopen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>