force-app/main/default/objects/Case/fields/Reason_for_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Reopen__c</fullName>
    <description>Populated with the reason the case a record is reopened SFM.</description>
    <label>Reason for Reopen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>