force-app/main/default/objects/Case/fields/Reason_Recall_Activity_Declined__c.field-meta.xml
<CustomField>
    <fullName>Reason_Recall_Activity_Declined__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <inlineHelpText>Provide the reason the recall activity was declined. For &quot;Other&quot;, populate the other reason in &quot;Reason Recall Postponed/Declined-Other&quot;.</inlineHelpText>
    <label>Reason Recall Activity Declined</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recall_Activity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer does not have product</fullName>
            </value>
            <value>
                <fullName>Customer refusal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>