force-app/main/default/objects/Case/fields/Reason_Recall_Activity_Postpone__c.field-meta.xml
<CustomField>
    <fullName>Reason_Recall_Activity_Postpone__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <description>Provide the reason the recall activity was not performed. For Other, populate the reason in &apos;Recall action declined details&apos;.</description>
    <inlineHelpText>Provide the reason the recall activity was postponed. For &quot;Other&quot;, populate the other reason in &quot;Reason Recall Postponed/Declined-Other&quot;.</inlineHelpText>
    <label>Reason Recall Activity Postponed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recall_Activity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer does not want to stop operations to perform action</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>